# SCOUT-CT

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
bench-libs/ct-examples/: Makefile  example.h  tests.c
config/: app.yml  common.yaml  target-ctexamples-passwordnonct.yaml  target-hydro.yaml  test-atlas1-report.yml  test-ci.yml  test-example.yml  test-functional.yml  test-heavy.yml  test-hydro.yml  test.yml
docker/: Dockerfile  Dockerfile.prod
profiling/memory/: 1_(17)_memusage.csv  memusage.csv
src/ya_cttool/: __init__.py  analysis.py  cli.py  config.py  exception.py  log.py  plugin_loading.py  result.py
src/ya_cttool/common/: __init__.py  source_code_files_manager.py  source_code_locator.py
src/ya_cttool/core/: cfgexploration.py  custom_engine.py  exception.py  helpers.py  models.py  tainting.py
tests/: compilation.py  config.py  evaluation.py  run.py
tests/cases/_expected/: atlas1-report.json  example-math_multct-of.json  example-math_multnonct1-of.json  example-math_multnonct1.json  example-math_multnonct2-of.json  example-math_multnonct2.json  example-math_multnonct3.json  example-math_sqmnonct.json  example-passwordnonct.json  functional-fopen_fread_urandom-of.json  functional-write_from_array-of.json  tinyaes-aes_enc-of.json
tests/cases/atlas1/: Makefile  atlas1_loop.c  atlas1_report.c
tests/cases/bearssl/: Makefile  aes_ct_cbcenc.c
tests/cases/ct-examples/: Makefile  target-math_multct-of.c  target-math_multct.c  target-math_multnonct1-of.c  target-math_multnonct1.c  target-math_multnonct2-of.c  (+8 more)
(+27 files in other folders)
